# pretalx-mozilla

./: MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
pretalx_mozilla/: __init__.py  apps.py  signals.py
pretalx_mozilla/locale/en_Mozilla/LC_MESSAGES/: django.po
pretalx_mozilla/static/pretalx_mozilla/: style.css  style.scss
pretalx_mozilla/templates/pretalx_mozilla/: style.html
