[project]
name = "pretalx-mozilla"
dynamic = ["version"]
description = "Language module for use of pretalx at Mozilla events."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = []

[project.urls]
homepage = "https://github.com/pretalx/pretalx-mozilla"
repository = "https://github.com/pretalx/pretalx-mozilla.git"

[project.entry-points."pretalx.plugin"]
pretalx_mozilla = "pretalx_mozilla:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_mozilla.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [
  ".*",
]
